--- a/projects/graduate_rc_car/rc_car_top_envsettings.html
+++ b/projects/graduate_rc_car/rc_car_top_envsettings.html
@@ -14,46 +14,25 @@
 <td><b>par</b></td>
 </tr>
 <tr>
-<td>PATHEXT</td>
-<td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</td>
-<td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</td>
-<td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</td>
-<td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</td>
+<td>LD_LIBRARY_PATH</td>
+<td>/home/jjshawver/libs/xilinx/14.7/ISE_DS/ISE//lib/lin64</td>
+<td>/home/jjshawver/libs/xilinx/14.7/ISE_DS/ISE//lib/lin64</td>
+<td>/home/jjshawver/libs/xilinx/14.7/ISE_DS/ISE//lib/lin64</td>
+<td>/home/jjshawver/libs/xilinx/14.7/ISE_DS/ISE//lib/lin64</td>
 </tr>
 <tr>
-<td>Path</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\WINDOWS;<br>C:\WINDOWS\System32;<br>C:\WINDOWS\System32\Wbem;<br>C:\mu\bin64;<br>C:\mu\bin;<br>C:\Micron Common;<br>C:\Program Files\Common Files\Microsoft Shared\Windows Live;<br>C:\Program Files (x86)\Common Files\Microsoft Shared\Windows Live;<br>C:\Program Files (x86)\RSA SecurID Token Common;<br>C:\Program Files (x86)\Microsoft Application Virtualization Client;<br>C:\WINDOWS\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files\Microsoft SQL Server\110\Tools\Binn\;<br>C:\Program Files\TortoiseSVN\bin;<br>C:\Program Files (x86)\Windows Live\Shared;<br>C:\MinGW\bin;<br>C:\Program Files (x86)\Vim\vim74;<br>C:\Program Files (x86)\QuickTime\QTSystem\;<br>C:\Modeltech_pe_edu_10.3c\win32pe_edu</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\WINDOWS;<br>C:\WINDOWS\System32;<br>C:\WINDOWS\System32\Wbem;<br>C:\mu\bin64;<br>C:\mu\bin;<br>C:\Micron Common;<br>C:\Program Files\Common Files\Microsoft Shared\Windows Live;<br>C:\Program Files (x86)\Common Files\Microsoft Shared\Windows Live;<br>C:\Program Files (x86)\RSA SecurID Token Common;<br>C:\Program Files (x86)\Microsoft Application Virtualization Client;<br>C:\WINDOWS\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files\Microsoft SQL Server\110\Tools\Binn\;<br>C:\Program Files\TortoiseSVN\bin;<br>C:\Program Files (x86)\Windows Live\Shared;<br>C:\MinGW\bin;<br>C:\Program Files (x86)\Vim\vim74;<br>C:\Program Files (x86)\QuickTime\QTSystem\;<br>C:\Modeltech_pe_edu_10.3c\win32pe_edu</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\WINDOWS;<br>C:\WINDOWS\System32;<br>C:\WINDOWS\System32\Wbem;<br>C:\mu\bin64;<br>C:\mu\bin;<br>C:\Micron Common;<br>C:\Program Files\Common Files\Microsoft Shared\Windows Live;<br>C:\Program Files (x86)\Common Files\Microsoft Shared\Windows Live;<br>C:\Program Files (x86)\RSA SecurID Token Common;<br>C:\Program Files (x86)\Microsoft Application Virtualization Client;<br>C:\WINDOWS\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files\Microsoft SQL Server\110\Tools\Binn\;<br>C:\Program Files\TortoiseSVN\bin;<br>C:\Program Files (x86)\Windows Live\Shared;<br>C:\MinGW\bin;<br>C:\Program Files (x86)\Vim\vim74;<br>C:\Program Files (x86)\QuickTime\QTSystem\;<br>C:\Modeltech_pe_edu_10.3c\win32pe_edu</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\WINDOWS;<br>C:\WINDOWS\System32;<br>C:\WINDOWS\System32\Wbem;<br>C:\mu\bin64;<br>C:\mu\bin;<br>C:\Micron Common;<br>C:\Program Files\Common Files\Microsoft Shared\Windows Live;<br>C:\Program Files (x86)\Common Files\Microsoft Shared\Windows Live;<br>C:\Program Files (x86)\RSA SecurID Token Common;<br>C:\Program Files (x86)\Microsoft Application Virtualization Client;<br>C:\WINDOWS\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files\Microsoft SQL Server\110\Tools\Binn\;<br>C:\Program Files\TortoiseSVN\bin;<br>C:\Program Files (x86)\Windows Live\Shared;<br>C:\MinGW\bin;<br>C:\Program Files (x86)\Vim\vim74;<br>C:\Program Files (x86)\QuickTime\QTSystem\;<br>C:\Modeltech_pe_edu_10.3c\win32pe_edu</td>
+<td>PATH</td>
+<td>/home/jjshawver/libs/xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/usr/local/sbin:<br>/usr/local/bin:<br>/usr/sbin:<br>/usr/bin:<br>/sbin:<br>/bin:<br>/usr/games:<br>/usr/local/games</td>
+<td>/home/jjshawver/libs/xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/usr/local/sbin:<br>/usr/local/bin:<br>/usr/sbin:<br>/usr/bin:<br>/sbin:<br>/bin:<br>/usr/games:<br>/usr/local/games</td>
+<td>/home/jjshawver/libs/xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/usr/local/sbin:<br>/usr/local/bin:<br>/usr/sbin:<br>/usr/bin:<br>/sbin:<br>/bin:<br>/usr/games:<br>/usr/local/games</td>
+<td>/home/jjshawver/libs/xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/usr/local/sbin:<br>/usr/local/bin:<br>/usr/sbin:<br>/usr/bin:<br>/sbin:<br>/bin:<br>/usr/games:<br>/usr/local/games</td>
 </tr>
 <tr>
 <td>XILINX</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE\</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE\</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE\</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE\</td>
-</tr>
-<tr>
-<td>XILINX_DSP</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE</td>
-</tr>
-<tr>
-<td>XILINX_EDK</td>
-<td>C:\Xilinx\14.7\ISE_DS\EDK</td>
-<td>C:\Xilinx\14.7\ISE_DS\EDK</td>
-<td>C:\Xilinx\14.7\ISE_DS\EDK</td>
-<td>C:\Xilinx\14.7\ISE_DS\EDK</td>
-</tr>
-<tr>
-<td>XILINX_PLANAHEAD</td>
-<td>C:\Xilinx\14.7\ISE_DS\PlanAhead</td>
-<td>C:\Xilinx\14.7\ISE_DS\PlanAhead</td>
-<td>C:\Xilinx\14.7\ISE_DS\PlanAhead</td>
-<td>C:\Xilinx\14.7\ISE_DS\PlanAhead</td>
+<td>/home/jjshawver/libs/xilinx/14.7/ISE_DS/ISE/</td>
+<td>/home/jjshawver/libs/xilinx/14.7/ISE_DS/ISE/</td>
+<td>/home/jjshawver/libs/xilinx/14.7/ISE_DS/ISE/</td>
+<td>/home/jjshawver/libs/xilinx/14.7/ISE_DS/ISE/</td>
 </tr>
 </TABLE>
 <A NAME="Synthesis Property Settings"></A>
@@ -472,31 +451,31 @@
 </tr>
 <tr>
 <td>CPU Architecture/Speed</td>
-<td>Intel(R) Core(TM) i5-3437U CPU @ 1.90GHz/2394 MHz</td>
-<td>Intel(R) Core(TM) i5-3437U CPU @ 1.90GHz/2394 MHz</td>
-<td>Intel(R) Core(TM) i5-3437U CPU @ 1.90GHz/2394 MHz</td>
-<td>Intel(R) Core(TM) i5-3437U CPU @ 1.90GHz/2394 MHz</td>
+<td>Intel(R) Core(TM) i5-3437U CPU @ 1.90GHz/2401.000 MHz</td>
+<td>Intel(R) Core(TM) i5-3437U CPU @ 1.90GHz/900.000 MHz</td>
+<td>Intel(R) Core(TM) i5-3437U CPU @ 1.90GHz/768.000 MHz</td>
+<td>Intel(R) Core(TM) i5-3437U CPU @ 1.90GHz/768.000 MHz</td>
 </tr>
 <tr>
 <td>Host</td>
-<td>JJSHAWVER-LAP</td>
-<td>JJSHAWVER-LAP</td>
-<td>JJSHAWVER-LAP</td>
-<td>JJSHAWVER-LAP</td>
+<td>jjshawver-linux</td>
+<td>jjshawver-linux</td>
+<td>jjshawver-linux</td>
+<td>jjshawver-linux</td>
 </tr>
 <tr>
 <td>OS Name</td>
-<td>Microsoft Windows 7 , 64-bit</td>
-<td>Microsoft Windows 7 , 64-bit</td>
-<td>Microsoft Windows 7 , 64-bit</td>
-<td>Microsoft Windows 7 , 64-bit</td>
+<td>Ubuntu</td>
+<td>Ubuntu</td>
+<td>Ubuntu</td>
+<td>Ubuntu</td>
 </tr>
 <tr>
 <td>OS Release</td>
-<td>Service Pack 1  (build 7601)</td>
-<td>Service Pack 1  (build 7601)</td>
-<td>Service Pack 1  (build 7601)</td>
-<td>Service Pack 1  (build 7601)</td>
+<td>Ubuntu 14.04.1 LTS</td>
+<td>Ubuntu 14.04.1 LTS</td>
+<td>Ubuntu 14.04.1 LTS</td>
+<td>Ubuntu 14.04.1 LTS</td>
 </tr>
 </TABLE>
 </BODY> </HTML>
